--- a/admin/app/views/commercial/commercialMenu.scala.html
+++ b/admin/app/views/commercial/commercialMenu.scala.html
@@ -17,6 +17,7 @@
                     <ul>
                         <li><a href="@controllers.admin.routes.CommercialController.renderCommercialRadiator()">Commercial Radiator</a></li>
                         <li><a href="@controllers.admin.routes.CommercialController.renderBrowserPerformanceDashboard()">Real-user advert performance</a></li>
+                        <li><a href="@controllers.admin.routes.CommercialController.renderProgrammaticPerformanceDashboard()">Programmatic advert performance</a></li>
                      </ul>
                 </div>
             </div>
