--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -76,7 +76,7 @@ $gutter-large: 55px;
     outline: none;
     // Override button from user agent stylesheet
     border-radius: 100%;
-    z-index: 1031;
+    z-index: 1071;
     background-color: $news-main-2;
     cursor: pointer;
 
@@ -328,7 +328,7 @@ $gutter-large: 55px;
     bottom: 0;
     left: 0;
     line-height: 1;
-    z-index: $zindex-modal;
+    z-index: $zindex-main-menu;
 }
 
 .main-menu-container__overlay {
@@ -340,7 +340,7 @@ $gutter-large: 55px;
     left: 0;
     transition: opacity .2s cubic-bezier(.23, 1, .32, 1);
     // Without this, in Safari/IOS this element appears above the menu
-    z-index: 2;
+    z-index: $zindex-overlay;
     display: none;
 }
 
