make overlay a label for main menu toggle

--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -30,9 +30,10 @@
     </li>
 }
 
-<div href="#" class="main-menu-container__overlay" aria-hidden="true"></div>
+<label for="main-menu-toggle" class="main-menu-container__overlay" aria-hidden="true"></label>
 
 <div class="main-menu-container">
+
         <!-- TODO: Provide tabbable alternative -->
 
     <div class="main-menu-container__menu js-reset-scroll-on-menu" id="main-menu" aria-hidden="true">
@@ -78,3 +79,4 @@
         </ul>
     </div>
 </div>
+
