Fixed sizing on desktop.

--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -157,6 +157,14 @@
     width: 170px;
 }
 
+.contributions__contribute--no-buttons--control {
+    width: 130px;
+}
+
+.contributions__contribute--no-buttons--give {
+    width: 130px;
+}
+
 @include mq($from: phablet) {
     .contributions__option-button--bottom {
         width: 70px;
@@ -165,7 +173,6 @@
     .contributions__contribute--bottom {
         margin-left: $gs-gutter / 2;
         margin-top: 0;
-        width: 130px;
     }
 
     .contributions__amount-field--bottom {
