provide generic js hook for main menu

--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -34,9 +34,9 @@
 
 <div class="main-menu-container">
 
-        <!-- TODO: Provide tabbable alternative -->
+    <!-- TODO: Provide tabbable alternative -->
 
-    <div class="main-menu-container__menu js-reset-scroll-on-menu" id="main-menu" aria-hidden="true">
+    <div class="main-menu-container__menu js-main-menu" id="main-menu" aria-hidden="true">
         <ul class="main-navigation">
             @NewNavigation.topLevelSections.map { section =>
                 @sectionList(section)
