--- a/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
+++ b/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
@@ -1,7 +1,7 @@
 <div class="survey-overlay survey-adblock js-survey-adblock is-hidden" data-link-name="adblock <%=variant%> response overlay" role="dialog" aria-label="take part in our survey">
     <div class="survey-container">
 
-        <div class="survey-content-1 rely">
+        <div class="survey-content">
             <% if (marque36icon) { %>
             <div class="survey-logo">
                 <%=marque36icon%>
@@ -10,34 +10,68 @@
             <div class="survey-icon">
                 <%=surveyOverlaySimple%>
             </div>
-            <h3 class="survey-text__header">
-                Advertising helps fund our journalism
-            </h3>
-            <div class="survey-text">
-                <p class="survey-text__strong">
-                    Some text that explains WTF this is.
-                </p>
+            <div class="survey-header">
+                <div class="state-1 state-2">
+                    <div class="survey-text__header">
+                        Advertising helps fund our journalism
+                    </div>
+                    <div class="survey-text">
+                        <p class="survey-text__strong">
+                            Advertising revenue and direct payments from our reader base are the only ways we can maintain the Guardian in perpetuity.
+                        </p>
+                        <p class="survey-text__strong">
+                            Please choose one of the methods below to continue reading our content.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="state-3 is-hidden">
+                    <div class="survey-text__header">
+                        Choose ad-free payment method
+                    </div>
+                    <div class="survey-text">
+                        <p class="survey-text__strong">
+                            <%=adFreeMessagePrefix%> buys you an ad-free experience across theguardian.com website when you sign in.
+                        </p>
+                        <p class="survey-text__strong">
+                            There's no ongoing commitment, and you can stop your payments or take a holiday from ad-free at any time.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="survey-link noads-button">
-            <a class="survey-link__takepart" href="#" data-link-name="<%=adFreeDataLink%>"><%=adFreeText%><%=arrowWhiteRight%></a>
-        </div>
-        <div class="survey-link whitelist-button">
-            <a class="survey-link__takepart" href="#" data-link-name="<%=whitelistDataLink%>"><%=whitelistText%><%=arrowWhiteRight%></a>
+        <div class="survey-buttons">
+            <div class="survey-button__cta noads state-1 state-2" data-link-name="<%=adFreeDataLink%>"><%=adFreeButtonText%><%=arrowWhiteRight%></div>
+            <div class="survey-button__cta whitelist state-1 state-3" data-link-name="<%=whitelistDataLink%>"><%=whitelistText%><%=arrowWhiteRight%></div>
         </div>
 
-        <div class="howto-unblock is-hidden">
-            <hr /><p class="survey-text__info">How to allow ads on the Guardian with AdBlock or AdBlock Plus
-            (<a class="text-link" href="/info/2016/mar/21/how-to-disable-your-adblocker-for-theguardiancom?INTCMP=ADB_RESP_<%=variant%>">detailed instructions</a>)</p>
+        <div class="howto-unblock state-2 is-hidden">
+            <hr />
+            <div class="survey-text__info">
+                <span>
+                    How to allow ads on the Guardian with AdBlock or AdBlock Plus (<a class="text-link" href="/info/2016/mar/21/how-to-disable-your-adblocker-for-theguardiancom?INTCMP=ADB_RESP_<%=variant%>">detailed instructions</a>)
+                </span>
+                <span class="howto-unblock__close-btn" data-link-name="survey adblock howto-unblock closed">
+                    <%=crossIcon%>
+                </span>
+            </div>
             <div class="image-link-container"><img src="<%=whitelistGuideImage%>"/></div>
             <p class="survey-text__info"><strong>Ad Block:</strong> Click the <img alt="adblock" src="<%=adBlockIcon%>" width="20px"/> icon &#x2794; &quot;Don\'t run on pages on this domain&quot; &#x2794; &quot;Exclude&quot;</p>
             <p class="survey-text__info"><strong>Ad Block Plus:</strong> Click the <img alt="adblock plus" src="<%=adBlockPlusIcon%>" width="20px"/> icon &#x2794; &quot;Disable on theguardian.com&quot;</p>
             <p class="survey-text__info" style="margin-top: 25px;">After making this change, please reload the page in your browser.</p>
         </div>
 
-        <div class="survey-content-2 is-hidden pay-method">
-            ! NEEDS CONTENT !
+        <div class="howto-pay state-3 is-hidden">
+            <hr />
+            <div class="survey-text__info">
+                <span>
+                   Pay now!
+                </span>
+                <span class="pay-now__close-btn" data-link-name="survey adblock pay-now closed">
+                    <%=crossIcon%>
+                </span>
+            </div>
         </div>
 
         <div class="survey-content-3 is-hidden whitelist">
@@ -48,13 +82,9 @@
             ! NEEDS CONTENT !
         </div>
 
-        <div class="survey-links paying">
-            <hr />Already paying?&nbsp;
-            <a class="text-link" href="https://profile.theguardian.com/signin?INTCMP=ADB_RESP_<%=variant%>" data-link-name="adblock supporter <%=variant%>">supporter sign in</a>
-            &nbsp;&nbsp;|&nbsp;&nbsp;
-            <a class="text-link" href="/commercial/subscriber-number" data-link-name="adblock subscriber <%=variant%>">subscriber sign in</a>
-            &nbsp;&nbsp;|&nbsp;&nbsp;
-            <a class="text-link" href="/commercial/contributor-email" data-link-name="adblock contributor <%=variant%>">contributor validation</a>
+        <div class="survey-text__info">
+            <hr />
+            Already paying?&nbsp;<a class="text-link" href="https://profile.theguardian.com/signin?INTCMP=ADB_RESP_<%=variant%>" data-link-name="adblock supporter <%=variant%>">I am a supporter</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="text-link" href="/commercial/subscriber-number" data-link-name="adblock subscriber <%=variant%>">I am a subscriber</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="text-link" href="/commercial/contributor-email" data-link-name="adblock contributor <%=variant%>">I am a contributor</a>
         </div>
 
     </div>
