--- a/static/src/stylesheets/module/content/_live-blog.scss
+++ b/static/src/stylesheets/module/content/_live-blog.scss
@@ -427,7 +427,6 @@ $block-padding-right: $gs-gutter;
     max-width: 100%;
     background-position: 0 ($gs-baseline/3)*2 !important;
     background-repeat: no-repeat;
-    border-top: 1px dotted $neutral-3;
 
     .block-time + .block-elements .element-tweet:first-child & {
         border-top: 0;
@@ -441,10 +440,11 @@ $block-padding-right: $gs-gutter;
     @include fs-textSans(3);
     display: inline-block;
     border-left-width: 0;
-    padding: $gs-baseline/2 0 0;
+    padding: $gs-baseline/2 $gs-gutter/2;
+    background-color: $neutral-6;
+    border-top: 1px solid $neutral-4;
+    margin: 0;
     margin-bottom: $gs-baseline;
-    margin-left: $gs-gutter/2;
-    margin-right: $gs-gutter/2;
     font-style: normal;
 
     &:first-child {
@@ -476,10 +476,11 @@ $block-padding-right: $gs-gutter;
 .tweet-user {
     display: inline-block;
     font-weight: bold;
-    padding-left: 40px;
+    padding-right: 40px;
     padding-bottom: 1px;
     margin-bottom: 0;
     background-repeat: no-repeat;
+    background-position-x: 100%;
 }
 
 .tweet-main-image {
@@ -488,9 +489,10 @@ $block-padding-right: $gs-gutter;
 }
 
 .tweet-date {
+    @include fs-textSans(1);
     display: block;
     color: $neutral-2;
-    padding-left: 40px;
+    padding-right: 40px;
     margin-bottom: ($gs-baseline/3)*4;
 }
 
