--- a/static/src/stylesheets/module/commercial/_adverts.scss
+++ b/static/src/stylesheets/module/commercial/_adverts.scss
@@ -636,7 +636,8 @@
 
 .content__main-column--article,
 .content__main-column--liveblog,
-.content--media--video {
+.content--media--video,
+.content--media--audio {
     .adverts__badge--alt {
         padding-bottom: 20px;
     }
@@ -648,7 +649,9 @@
     }
 }
 
-.content--media--video:not(.paid-content--advertisement-feature) {
+.content--media--video:not(.paid-content--advertisement-feature),
+.content--media--audio:not(.paid-content--advertisement-feature),
+.content--gallery:not(.paid-content--advertisement-feature) {
     .adverts__badge,
     .adverts__badge__help {
         color: $neutral-6;
