--- a/static/src/javascripts/projects/common/views/ui/notifications-follow-link.html
+++ b/static/src/javascripts/projects/common/views/ui/notifications-follow-link.html
@@ -7,3 +7,4 @@
          <span class="live-notifications__label live-notifications__label--unsubscribed">Receive updates on this story</span>
      <% } %>
  </button>
+ <span class="live-notifications__label live-notifications__label--denied">Oops! You need to <a href="https://support.google.com/chrome/answer/3220216">unblock notifications</a> for www.theguardian.com</span>
