--- a/static/src/stylesheets/module/preferences/_notifications.scss
+++ b/static/src/stylesheets/module/preferences/_notifications.scss
@@ -97,6 +97,13 @@ $notifications-button-height: 28px;
     color: $live-main-1;
     line-height: $slider-height;
     display: none;
+
+    &--denied {
+        @include fs-textSans(2, true);
+        padding: $gs-baseline 0;
+        display: none;
+        text-align: left;
+    }
 }
 
 @each $state in (subscribed, unsubscribed) {
