Dump the hr elements. What is this, 1991 again? @dominickendrick

--- a/static/src/stylesheets/module/commercial/surveys/_survey.scss
+++ b/static/src/stylesheets/module/commercial/surveys/_survey.scss
@@ -132,6 +132,10 @@
     width: 100%;
     height: 100%;
 
+    .top-border {
+        border-top: 1px solid #dddddd;
+    }
+
     .countdown {
         @include fs-textSans(2);
         display: block;
@@ -244,6 +248,7 @@
         @include fs-bodyCopy(1);
         line-height: 120%;
         text-align: left;
+        margin-top: 5px;
 
         .center {
             text-align: center;
