--- a/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
+++ b/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
@@ -68,8 +68,7 @@
             <div class="survey-button-rounded__cta readon thankyou-state is-hidden" data-link-name="adblock paymentdone continuetoarticle">Continue to article<%=arrowWhiteRight%></div>
         </div>
 
-        <div class="howto-unblock whitelist-state is-hidden">
-            <hr />
+        <div class="howto-unblock whitelist-state is-hidden top-border">
             <div class="survey-text__info">
                 <span class="survey-text__strong">
                     Allow ads and browse for free. <a class="text-link" href="/info/2016/mar/21/how-to-disable-your-adblocker-for-theguardiancom?INTCMP=ADB_RESP30pc_<%=variant%>"><span>More information</span></a>
@@ -84,21 +83,20 @@
             <p class="survey-text__info" style="margin-top: 25px;">After making this change, please reload the page in your browser.</p>
         </div>
 
-        <div class="howto-pay adfree-state is-hidden">
-            <hr />
+        <div class="howto-pay adfree-state is-hidden top-border">
             <div class="survey-text__info">
                 <div class="pay-now__close-btn" data-link-name="survey adblock <%=variant%> pay-now closed"><%=crossIcon%></div>
                 <div class="survey-buttons">
                     <div class="survey-button-rounded__cta pay ccard" data-link-name="adblock adfree <%=variant%> creditcard button" alt="Pay with debit or credit card">Pay with debit/credit card<%=arrowWhiteRight%></div>
                     <div class="survey-button-rounded__cta pay paypal" data-link-name="adblock adfree <%=variant%> paypal button"><span class="pp-paywith">Pay with</span><span class="is-hidden">paypal</span><%=arrowWhiteRight%></div>
                 </div>
-                <hr />
-                <p class="survey-text__strong">Don't want to pay? <a class="text-link cta-whitelist" data-link-name="pay-now whitelist <%=variant%>">Allow ads</a>&nbsp;&#x2794;</p>
+                <div class="survey-text__strong top-border">
+                    <p>Don't want to pay? <a class="text-link cta-whitelist" data-link-name="pay-now whitelist <%=variant%>">Allow ads</a>&nbsp;&#x2794;</p>
+                </div>
             </div>
         </div>
 
-        <div class="survey-text__info greeting-state">
-            <hr />
+        <div class="survey-text__info greeting-state top-border">
             <div class="footer">
                 <p>
                     Already paying?&nbsp;<a class="text-link" href="https://profile.theguardian.com/signin?INTCMP=ADB_RESP30pc_<%=variant%>" data-link-name="adblock supporter <%=variant%>">Supporter sign in</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="text-link" href="/commercial/subscriber-number" data-link-name="adblock subscriber <%=variant%>">Print subscriber sign in</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="text-link" href="/commercial/contributor-email" data-link-name="adblock contributor <%=variant%>">Contributor sign in</a>
